posts: clean up previous posts and add one

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ paginate:       5
 
 # Excludes
 exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
+  - _posts_archive
 
 # Disqus (Set to your disqus id)
 disqus:         jekyll-tale
